[package]
name = "clusterinfo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bincode = "1.3.3"
borsh = "0.10.3"
bs58 = "0.4.0"
hex = "0.4.3"
log = "0.4.17"
tracing-subscriber = "0.3.16"
nom = "7.1.3"
itertools = "0.11.0"
reqwest = "0.11"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0.40"

futures = { version = "0.3.28", default-features = false }
futures-util = "0.3.28"
tokio = { version = "1.*", features = ["full"] }
async-stream = "0.3.5"

yellowstone-grpc-client = { path = "../../yellowstone-grpc-clusterinfo/yellowstone-grpc-client" }
yellowstone-grpc-proto = { path = "../../yellowstone-grpc-clusterinfo/yellowstone-grpc-proto" }

#patch  to build locally
solana-program = { path = "../../solana-geyzer-cluster/sdk/program"}
solana-sdk = { path = "../../solana-geyzer-cluster/sdk"}
solana-client = { path = "../../solana-geyzer-cluster/client"}
solana-rpc-client-api = { path = "../../solana-geyzer-cluster/rpc-client-api" }
solana-version = { path = "../../solana-geyzer-cluster/version"}
solana-account-decoder = { path = "../../solana-geyzer-cluster/account-decoder" }
solana-ledger = { path = "../../solana-geyzer-cluster/ledger"}
solana-streamer = { path = "../../solana-geyzer-cluster/streamer"}


#patch  to build locally
[patch.crates-io]
solana-program = { path = "../../solana-geyzer-cluster/sdk/program"}
solana-zk-token-sdk = { path = "../../solana-geyzer-cluster/zk-token-sdk"}
