[package]
name = "leadershedule"
version = "0.2.2"
authors = ["phild@mango.markets>"]
repository = "https://github.com/blockworks-foundation/solana-rpc-v2"
license = "AGPL"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
log = "0.4.17"
tracing-subscriber = "0.3.16"
tokio = { version = "1.*", features = ["full", "fs"]}
tokio-stream = "0.1.*"
borsh = "0.10.3"
time = { version = "0.3.25", features=["local-offset"]}
chrono = "0.4.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"

solana-client = "1.16.2"
solana-sdk = "1.16.2"
solana-transaction-status = "1.16.2"
solana-ledger = "1.16.2"
